--- a/src/components/PaymentForm/styles.scss
+++ b/src/components/PaymentForm/styles.scss
@@ -1,3 +1,20 @@
+.service-info{
+	background-color: #863DF9;
+	color: white;
+	text-align: center;
+	padding: 30px 0px 25px;
+	.service-amount{
+		font-size: 40px;
+		font-weight: bold;
+		margin-bottom: 0px;
+		line-height: 40px;
+	}
+	.service-duration{
+		font-size: 20px;
+		margin: 0px;
+	}
+}
+
 #payment-form{
     &form {
       align-self: center;
@@ -132,7 +149,10 @@
             margin: auto;
             margin-top: 10px;
         }
-    }
+	}
+	
+
+	
 
     @keyframes loading {
         0% {
