--- a/src/pages/Translators/styles.scss
+++ b/src/pages/Translators/styles.scss
@@ -59,6 +59,11 @@
     .star-container{
         width: 140px;
         margin-left: 15px;
+        .fa-start{
+            color: #863DF9 !important;
+            font-size: 16px !important;
+            margin-right: 10px !important;
+        }
         .name{
             padding-top: 0px;
         }
