availabilities list changes

--- a/src/components/AvailabilitiesList/styles.scss
+++ b/src/components/AvailabilitiesList/styles.scss
@@ -26,3 +26,13 @@
         }
     }
 }
+
+.availabilities-modal .margin-row-form {
+    margin-right: 50px !important;
+    text-align: center;
+    margin-bottom: 10px;
+    span{
+        position: relative;
+        top: 10px
+    }
+}
