--- a/src/components/TranslatorExperienceForm/styles.scss
+++ b/src/components/TranslatorExperienceForm/styles.scss
@@ -141,6 +141,10 @@
             margin-bottom: 0px;
             padding: 10px
         }
+        .filename{
+            color: black;
+            text-decoration: underline;
+        }
         button{
             background-color: #F3F3F3;
             color: black;
