--- a/src/components/ServicesList/styles.scss
+++ b/src/components/ServicesList/styles.scss
@@ -22,6 +22,12 @@
 
         
     }
+    .view-mas{
+        span{
+            color: #863DF9;
+            padding: 5px;
+        }
+    }
 
 }
 
