--- a/src/components/ServiceModal/styles.scss
+++ b/src/components/ServiceModal/styles.scss
@@ -90,5 +90,10 @@
         margin-bottom: 15px;
     }
 
+    .url-edit-button{
+        margin-top: 10px;
+        margin-left: 10px;
+    }
+
 }    
 
