--- a/src/App.scss
+++ b/src/App.scss
@@ -191,3 +191,203 @@ nav.navbar{
     top: 22px
 }
 
+@media screen and (min-width: 768px) {
+    .navbar-nav .mobile-item{
+        display: none;
+    }
+    .services-list .mobile-item, 
+    .transactions-list .mobile-item, 
+    .availabilities-list .mobile-item
+    .translators-list .mobile-item
+    {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .login-container, .signup-container, .recover-container{
+        .row{
+            flex-direction: column;
+        }
+    }
+    .navbar-nav.desktop-item, .availabilities-list .desktop-item{
+        display: none;
+    }   
+    nav.navbar{
+        padding: 7px 10px 0px;
+        .flag-select__option--placeholder{
+            padding: 0px;
+            .flag-select__option__label{
+                font-size: 0px;
+            }
+        } 
+        display: block;
+        >.navbar-nav, .navbar-toggler, .flag-select{
+            float: right;
+            margin-left: 0px;
+            .nav-item{
+                position: relative;
+                top: 5px;
+                right: 5px
+            }
+        }
+        >.navbar-brand{
+            position: relative;
+            bottom: 5px;
+            padding-bottom: 10px;
+        }
+        .item-menu{
+            p{
+                margin-top: 20px;
+            }
+        }
+    }
+    .services-list, .transactions-list{
+        .filters.row{
+            flex-direction: column;
+            .react-datepicker-wrapper{
+                padding-bottom: 15px;
+            }
+        }
+        .user-container{
+            padding: 0px !important;
+            text-align: center;
+            .userIcon{
+                flex-direction: column;
+                font-size: 12px;
+                .name{
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    width: 120px;
+                }
+            }
+        }
+        .table-services>tr>:not(:first-child){
+            display: none;
+        }
+        .mobile-item{
+            display: table-cell !important;
+            font-size: 14px;
+        }
+        .table td.mobile-item{
+            padding-top: 10px !important;
+            p{
+                margin-bottom: 5px;
+            }
+            button{
+                margin-top: 10px;
+                width: 100%;
+            }
+
+        }
+    }
+
+    .translator-profile.container{
+        .translator-profile-row{
+            flex-direction: column;
+            margin-right: 0px;
+            margin-left: 0px;
+            padding: 0px;
+
+            .menu-profile{
+                width: 100%;
+                margin-left: 0px;
+            }
+            .item-active-profile{
+                margin: 0px;
+                padding-left: 20px !important;
+                padding-right: 20px !important;
+            }
+            .container-profile{
+                flex-direction: column;
+                .services, .cucucreditos{
+                    text-align: left;
+                }
+            }
+            padding-bottom: 10px;
+            
+        }
+    }
+
+
+
+    .pagination-container{
+        text-align: center;
+        .pagination{
+            margin-right: 0px;
+            li{
+                font-size: 12px;
+                &.active a{
+                    font-size: 12px
+                }
+            }
+        } 
+    } 
+
+    .modal.right.fade .modal-dialog{
+        width: 100%;
+    }
+    .mr-auto.navbar-nav{
+        margin-left: 0px;
+    }
+
+    .profile-client-container .row{
+        margin: 0px;
+        flex-direction: column;
+
+        .container-profile{
+            .services, .cucucreditos{                
+                text-align: left;
+            }
+        }
+
+        &.col-padding{
+            padding: 0px;
+        }
+        .menu-profile{
+            margin-left: 0px;
+            border: 0px;
+        }
+        .item-active-profile{
+            margin: 0px;
+            padding-left: 20px !important;
+            padding-right: 20px !important;
+
+        }
+    }
+    .payment-page #payment-form{
+        padding: 0px;
+    }
+    
+}
+
+@media screen and (max-width: 500px) {
+    .login-container{
+        .login{
+            padding: 0px 15px;
+            .flag-select{
+                float: none;
+                text-align: center;
+            }
+        }
+    }
+    .signup-container{
+        padding-bottom: 50px;
+        .signup{
+            padding: 0px 15px;
+            .flag-select{
+                float: none;
+                text-align: center;
+            }
+            .button-type{
+                margin-top: 10px;
+            }
+        }
+    }
+    .recover-container{
+        .recover{
+            padding: 0px 15px;
+        }
+    }
+}
