--- a/src/pages/ProfileTranslator/styles.scss
+++ b/src/pages/ProfileTranslator/styles.scss
@@ -17,3 +17,35 @@
         }
     }
 }
+
+@media screen and (max-width: 768px) {
+    .profile-translator-client{
+        .translator-profile-main{
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            .name{
+                font-size: 14px;
+                span{
+                    font-size: 18px;
+                }
+                .fa-start{
+                    font-size: 18px !important;
+                }
+            }
+        }
+        .row{
+            flex-direction: column;
+            margin: 0px;
+        }
+        .col-padding{
+            padding: 0px
+        }
+        .opinions{
+            border: 0px;
+            .opinion-container{
+                border: 0px;
+            }
+        }
+    }
+}
