--- a/src/components/TransactionsList/styles.scss
+++ b/src/components/TransactionsList/styles.scss
@@ -36,3 +36,9 @@
     }
     
 }
+
+@media screen and (min-width: 768px) {
+    .transactions-list .filter-controls{
+        display: none;
+    }
+}
