--- a/src/App.scss
+++ b/src/App.scss
@@ -202,6 +202,33 @@ span.required{
     padding-right: 5px;
 }
 
+.Language-panel, 
+.specialities-panel ,
+.platforms-panel ,  
+.dropzone-container{
+    .item{
+        border: 1px solid #D1D1D1;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 10px;
+        p{
+            margin-bottom: 0px;
+            padding: 10px
+        }
+        .filename{
+            color: black;
+            text-decoration: underline;
+        }
+        button{
+            background-color: #F3F3F3;
+            color: black;
+            border: 0px;
+            padding: 5px 10px
+        }
+    }
+
+}
+
 @media screen and (min-width: 768px) {
     .navbar-nav .mobile-item{
         display: none;
