--- a/src/App.scss
+++ b/src/App.scss
@@ -229,6 +229,10 @@ span.required{
 
 }
 
+.alert-approved{
+    margin: 10px;
+}
+
 @media screen and (min-width: 768px) {
     .navbar-nav .mobile-item{
         display: none;
